put horizontal lines in divs, fixed spacing

--- a/rc-2017/resources/assets/styles/components/_company-description.scss
+++ b/rc-2017/resources/assets/styles/components/_company-description.scss
@@ -5,15 +5,20 @@
     justify-content: center;
     max-width: 1500px;
     margin: 0 auto;
-    margin-bottom: 50px;
+    margin-top: 65px;
+    margin-bottom: 65px;
   }
 
   &__header {
     display: flex;
     justify-content: center;
-    color: #3b4866;
+    color: #bf0001;
     font-size: 10px;
     margin: 0;
+  }
+
+  &__bottom-line {
+    margin-bottom: 50px;
   }
 
   &__paragraphs {
@@ -28,7 +33,7 @@ h1 {
 hr {
   width: 75%;
   height: 3px;
-  background: #3b4866;
+  background: #bf0001;
   margin-top: 0;
   margin-bottom: 0;
 }
